src/content/docs/en-us/0.9.x/index.md
---
title: Home
description: Andromeda wiki
---

<div class="badge-holder">

[![Available on Modrinth](/assets/images/badges/modrinth.svg)](https://modrinth.com/mod/andromeda)
[![Available on CurseForge](/assets/images/badges/curseforge.svg)](https://www.curseforge.com/minecraft/mc-mods/andromeda)

</div>

<p style="font-size: 120%">A galaxy is a collection of things and systems. So is this mod.</p>

<br/>

<img alt="Fabric API icon" src="/assets/images/icons/fabric.png" width="40" height="40"> [Fabric API](https://modrinth.com/mod/fabric-api) and <img alt="Cloth Config icon" src="/assets/images/icons/cloth-config.webp" width="40" height="40"> [Cloth Config API](https://modrinth.com/mod/cloth-config) are required!

<img alt="Mod Menu icon" src="/assets/images/icons/modmenu.webp" width="40" height="40"> [Mod Menu](https://modrinth.com/mod/modmenu) and <img alt="TooltipFix icon" src="/assets/images/icons/tooltipfix.png" width="40" height="40"> [ToolTipFix](https://modrinth.com/mod/tooltipfix) are highly recommended on client!

<br/>

If you have a feature suggestion, don't hesitate to post it on the [Discussions page](https://github.com/constellation-mc/andromeda/discussions/categories/ideas)!

**You can also check out the [Showcases](/showcases)!**

<p style="font-size: 200%">💜</p>

::: danger
This mod is only available on [Modrinth](https://modrinth.com/mod/andromeda) and [GitHub](https://github.com/constellation-mc/andromeda). If you got this mod from _anywhere_ else, it may contain malware similar to [fractureiser](https://github.com/fractureiser-investigation/fractureiser).

See [stop mod reposts](https://stopmodreposts.org/) for more info.

You have been warned!
:::

Help translate this wiki on [GitHub](https://github.com/constellation-mc/andromeda-wiki)!

---

`This site uses Cloudflare Web Analytics.`

<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="/assets/images/badges/CC-BY-NC-SA-4.0.svg" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">Andromeda wiki</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://github.com/constellation-mc/andromeda-wiki" property="cc:attributionName" rel="cc:attributionURL">zenfyr and contributors</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
